updating doc
